--- a/docs/release/src/osd/winui/mameui.rc
+++ b/docs/release/src/osd/winui/mameui.rc
@@ -488,7 +488,7 @@ IDI_ICON_SNAP           ICON                    "res\\win_snap.ico"
 //
 
 #ifdef RCMESS
-IDD_ABOUT DIALOG DISCARDABLE 0, 0, 296, 129
+IDD_ABOUT DIALOG 0, 0, 296, 129
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About MESSUI"
 FONT 8, "Tahoma"
@@ -496,7 +496,7 @@ BEGIN
     DEFPUSHBUTTON   "&OK",IDOK,200,109,50,14,WS_GROUP
     CTEXT           "Multi Emulator Super System",IDC_STATIC,147,7,142,11,NOT WS_GROUP
     CTEXT           "Version 0",IDC_VERSION,147,18,142,11,NOT WS_GROUP
-    CTEXT           "Copyright (C) 1997-2025 MAME Contributors",IDC_STATIC,147,29,142,10,NOT WS_GROUP
+    CTEXT           "Copyright (C) 1997-2026 MAME Contributors",IDC_STATIC,147,29,142,10,NOT WS_GROUP
     CTEXT           "MESSUI based on MAMEUI version by",IDC_STATIC,147,51,142,10,NOT WS_GROUP
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,147,44,142,1
     CTEXT           "Christopher Kirmse and the former MAMEUI team",IDC_STATIC,147,62,142,9,NOT WS_GROUP
@@ -506,14 +506,14 @@ BEGIN
     CONTROL         "",IDC_ABOUT,"Static",SS_BITMAP | SS_SUNKEN,7,7,16,14
 END
 #else
-IDD_ABOUT DIALOG DISCARDABLE 0, 0, 356, 129
+IDD_ABOUT DIALOG 0, 0, 356, 129
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About MAMEUI Classic"
 FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "&OK",IDOK,260,109,50,14,WS_GROUP
     CTEXT           "MAME Version 0",IDC_VERSION,147,7,200,11,NOT WS_GROUP
-    CTEXT           "Copyright (C) 1997-2025 MAME Contributors",IDC_STATIC,147,18,200,10,NOT WS_GROUP
+    CTEXT           "Copyright (C) 1997-2026 MAME Contributors",IDC_STATIC,147,18,200,10,NOT WS_GROUP
     CTEXT           "MAMEUI Classic developed by",IDC_STATIC,147,42,200,10,NOT WS_GROUP
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,147,35,200,1
     CTEXT           "Christopher Kirmse and the former MAMEUI team",IDC_STATIC,147,51,200,9,NOT WS_GROUP
@@ -525,7 +525,7 @@ BEGIN
 END
 #endif
 
-//IDD_DIRECTX DIALOG DISCARDABLE 0, 0, 236, 69
+//IDD_DIRECTX DIALOG 0, 0, 236, 69
 //STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 //CAPTION "MESS"
 //FONT 8, "Tahoma"
@@ -534,7 +534,7 @@ END
 //    EDITTEXT        IDC_DIRECTX_HELP,7,0,222,48,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 //END
 
-IDD_AUDIT DIALOG DISCARDABLE 0, 0, 283, 388
+IDD_AUDIT DIALOG 0, 0, 283, 388
 STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "File Audit"
 FONT 8, "Tahoma"
@@ -573,7 +573,7 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,144,368,40,14
 END
 
-IDD_DIRECTORIES DIALOG DISCARDABLE 0, 0, 230, 277
+IDD_DIRECTORIES DIALOG 300, 100, 230, 277
 // WS_SYSMODAL gives the X to close; not used for menus
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Directories"
@@ -592,7 +592,7 @@ BEGIN
     PUSHBUTTON      "Delete",IDC_DIR_DELETE,173,87,50,14
 END
 
-IDD_COLUMNS DIALOG DISCARDABLE 0, 0, 302, 145
+IDD_COLUMNS DIALOG 0, 0, 302, 145
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Customise Fields"
 FONT 8, "Tahoma"
@@ -690,7 +690,7 @@ BEGIN
 //    PUSHBUTTON      "Restore Default Settings",IDC_USE_DEFAULT,118,258,97,14,0,0,HIDC_USE_DEFAULT
 END
 
-IDD_PROP_GAME DIALOG DISCARDABLE 0, 0, 220, 276
+IDD_PROP_GAME DIALOG 0, 0, 220, 276
 STYLE WS_CHILD | WS_CAPTION
 CAPTION "General"
 FONT 8, "Tahoma"
@@ -718,7 +718,7 @@ BEGIN
     LTEXT           "Static",IDC_PROP_CLONEOF,74,233,130,33
 END
 
-IDD_PROP_AUDIT DIALOG DISCARDABLE 0, 0, 220, 240
+IDD_PROP_AUDIT DIALOG 0, 0, 220, 240
 STYLE WS_CHILD | WS_CAPTION
 CAPTION "Audit"
 FONT 8, "Tahoma"
@@ -995,7 +995,6 @@ BEGIN
     COMBOBOX        IDC_DEFAULT_INPUT,119,50,90,53,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP,0,HIDC_DEFAULT_INPUT
     GROUPBOX        "",IDC_STATIC,113,71,102,66
     CONTROL         "Enable lightgun input",IDC_LIGHTGUN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,71,80,10,0,HIDC_LIGHTGUN
-    CONTROL         "Offscreen shots reload",IDC_RELOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,83,86,10,0,HIDC_RELOAD
     CONTROL         "Dual lightguns",IDC_DUAL_LIGHTGUN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,96,86,10,0,HIDC_DUAL_LIGHTGUN
     CONTROL         "Multiple keyboards",IDC_MULTIKEYBOARD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,109,75,10,0,HIDC_MULTIKEYBOARD
     CONTROL         "Multiple mice",IDC_MULTIMOUSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,122,56,10,0,HIDC_MULTIMOUSE
@@ -1235,16 +1234,16 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,192,204,50,14
 END
 
-IDD_CUSTOM_FILE DIALOG DISCARDABLE 0, 0, 190, 135
+IDD_CUSTOM_FILE DIALOG 0, 0, 390, 335
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Add Game To Custom Folder"
 FONT 8, "Tahoma"
 BEGIN
-    LTEXT           "",IDC_CUSTOMFILE_GAME,6,6,175,10,SS_NOPREFIX | SS_CENTERIMAGE
+    LTEXT           "",IDC_CUSTOMFILE_GAME,6,6,375,210,SS_NOPREFIX | SS_CENTERIMAGE
     CONTROL         "CustomTree",IDC_CUSTOM_TREE,"SysTreeView32", TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT |
-                    TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | TVS_FULLROWSELECT | WS_BORDER | WS_TABSTOP,6,18,178,90
-    DEFPUSHBUTTON   "OK",IDOK,42,114,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,98,114,50,14
+                    TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | TVS_FULLROWSELECT | WS_BORDER | WS_TABSTOP,6,18,378,290
+    DEFPUSHBUTTON   "OK",IDOK,242,314,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,298,314,50,14
 END
 
 IDD_PROP_SOFTWARE DIALOGEX 0, 0, 220, 220
